Fixed verse game and spacing, adding user feedback

--- a/styles/Colors.scss
+++ b/styles/Colors.scss
@@ -20,6 +20,7 @@ $darker-font-color: #081A0A;
 $maroon: #ac2f27;
 $white: #fef5e2;
 $grey: #A7A6A2;
+$dark-grey: #888784;
 $tan: #EEEBE1;
 $red: #ac2f27;
 $red_dark: #8f1d15;
