--- a/styles/VerseGame.module.scss
+++ b/styles/VerseGame.module.scss
@@ -32,33 +32,39 @@
     }
 }
 
-.card {
+.verseDisplay {
+    color: $grey;
+    display: flex;
+    flex-flow: wrap;
+    flex: 1;
+    justify-content: flex-start;
+
+    width: 100%;
+
+    div {
+        padding-right: 3px;
+    }
+}
+
+.input {
     background-color: $primary_background;
     background-size:16px 16px;
-    color: $font-color;
-    height: 100%;
     border: 2px solid $secondary_background;
-    width: 100%;
-    height: 30vh;
+    text-align: center;
+    color: $darker-font-color;
 
-    .verseText {
-        width: 100%;
-        height: 100%;
-        color: $darker-font-color;
+    border : 0px solid $grey;
+    border-bottom-width : 1px;
+    margin-bottom: 2em;
 
-        background-color: transparent;
-        border : 0px solid $grey;
-        border-bottom-width : 1px;
-        background-color : transparent;
+    font-family: $baskerville;
+    font-size: 20px;
 
-        font-family: $baskerville;
-        font-size: 20px;
-
-        &:focus {
-            outline: none !important;
-            border-color: $secondary_background;
-        }
+    &:focus {
+        outline: none !important;
+        border-color: $secondary_background;
     }
+    
 }
 
 .steps {
