--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,3 +22,13 @@ a {
   box-sizing: border-box;
   font-family: $baskerville;
 }
+
+
+
+.wrong {
+    color: $red;
+}
+
+.right {
+    color: $dark-font-color;
+}
